--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <label for="domainExtension"><strong>Domain Extension</strong></label>
     <select id="domainExtension">
         <option value=".com">.com</option>
+        <option value=".ai">.com</option>
         <option value=".net">.net</option>
         <option value=".org">.org</option>
         <option value=".io">.io</option>
