--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             box-sizing: border-box;
         }
         body {
-            height: 100vh;
+/*             height: 100vh; */
             background-color: #181818;
             display: flex;
             flex-direction: column;
