--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             color: #ffffff;
             text-align: center;
             line-height: 2em;
+width:80vw;
         }
 
         a {
@@ -112,7 +113,8 @@
     <label id="statusLabel"></label>
     <table id="availableDomains"></table>
     
-    <p>Kindly note, some domains might be false positives as this app depends upon free resources. | Built with 💛 by <a href="https://www.linkedin.com/in/mukeshguptaa/">Mukesh Gupta</a></p>
+    <p>Kindly note, some domains might be false positives as this app depends upon free resources.<br>
+    Built with 💛 by <a href="https://www.linkedin.com/in/mukeshguptaa/">Mukesh Gupta</a></p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.min.js"></script>
     <script>
